@@ -1,5 +1,14 @@
 2009-11-18  Alan Modra  <amodra@bigpond.net.au>
 
+	* bfd-in.h (_bfd_elf_ppc_at_tls_transform): Declare.
+	* bfd-in2.h: Regenerate.
+	* elf64-ppc.c (ppc64_elf_relocate_section): Move code for R_PPC64_TLS
+	insn optimisation to..
+	* elf32-ppc.c (_bfd_elf_ppc_at_tls_transform): ..here.  New function.
+	(ppc_elf_relocate_section): Use it.
+
+2009-11-18  Alan Modra  <amodra@bigpond.net.au>
+
 	* targets.c: Don't include alloca-conf.h.
 	(bfd_get_target_info): Don't use alloca.
 
